--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@calcom/embed-react": "^1.5.3",
     "@supabase/supabase-js": "^2.97.0",
     "date-fns": "^4.1.0",
+    "lucide-react": "^0.575.0",
     "next": "16.1.6",
     "pg": "^8.18.0",
     "react": "19.2.3",
